# veritas

./: AGENTS.md  AUDIT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Dockerfile.cli  FEATURES.md  FEATURE_SCORECARD.md  LICENSE.md  MODEL_SERVING_UPDATE.md  Makefile  PRODUCTION_UPGRADE_REPORT.md  QUICKSTART.md  README.md  VALIDATION_MATRIX.md  VALIDATION_RUN.md  VERITAS_DELIVERY_REPORT.md  docker-compose.e2e.yml  docker-compose.yml  validation-last.json
apps/api/: Cargo.toml
apps/api/src/: artifact_decision.rs  evidence_registry.rs  governance.rs  journey.rs  lineage.rs  main.rs  math_tools.rs  planning_context.rs  providers.rs  schemas.rs
apps/api/src/gates/: evidence.rs  human.rs  math_tools.rs  mod.rs  representation.rs  shacl.rs
apps/api/src/tools/: code.rs  distributed.rs  executor.rs  math.rs  mod.rs  registry.rs  scheduler.rs
apps/cli/: Cargo.toml
config/: veritas.yaml
docs/: MODELS.md  STARTUP_SCREEN.md  STRUCTURED_OUTPUTS.md
schemas/: artifact_decision.schema.json  citation_record.schema.json  codegen.schema.json  evidence_eligibility.schema.json  evidence_manifest.schema.json  formula_record.schema.json  human_checkpoint.schema.json  math_reasoning.schema.json  math_validation_report.schema.json  planner.schema.json  planning_context.schema.json  repair.schema.json  run_report.schema.json
scripts/: bootstrap.sh  check-packaging.sh  generate-code.sh  generate-feature-scorecard.py  ingest-demo.sh  package-release.sh  production-acceptance.sh  reason.sh  update-audit.py  upload-ontology.sh  validate-host.sh  validate-spec.py
(+142 files in other folders)
