[workspace]
resolver = "2"
members = ["apps/api", "apps/cli"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/daddydrac/veritas"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
